@@ -1,4 +1,6 @@
 0.1-77
+- add bcd2integer()
+- byte2binary(): add endian argument
 - add matlab2POSIXt()
 - add imagep(), and make plot.adcp() use it
 - plot.pt(): add plim and Tlim arguments
